Scrollbar fix

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -9,6 +9,32 @@ body {
   margin:0;
   background-color:#DDD;
   font-family: 'Open Sans', sans-serif;
+  overflow:hidden;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 18px;
+}
+::-webkit-scrollbar-track {
+  background-color:rgba(0,0,0,0);
+}
+::-webkit-scrollbar-thumb {
+  height: 6px;
+  border: 0;
+  background-clip: padding-box;
+  background-color: rgba(0, 0, 0, 0.15);
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+  display: none;
+}
+::-webkit-scrollbar-corner {
+  background-color: transparent;
 }
 
 #menu {
@@ -35,20 +61,27 @@ body {
 }
 
 #musicApp {
-  margin-top:110px;
+  padding-top:30px;
   text-align:center;
+  position:absolute;
+  overflow-y:scroll;
+  top:80px;
+  left:0;
+  right:0;
+  bottom:0;
 }
 
 @media all and (max-width: 700px) {
   #musicApp {
-    margin-bottom:120px;
+    padding-bottom:30px;
+    bottom:90px;
   }
 }
 
 @media all and (max-width: 600px) {
   #musicApp {
-    margin-top:80px;
-    margin-bottom:90px;
+    padding-top:0;
+    padding-bottom:0px;
   }
 }
 
